@@ -1,3 +1,8 @@
+2006-06-30  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
+	* cairomm/xlib_surface.cc, cairomm/xlib_surface.h: add new get_height() and
+	get_width() API to XlibSurface
+
 2006-06-27  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
 
 	* cairomm/enums.h: Added enum types to support the new get_type() and SVG
